[tool.poetry]
name = "gym-microrts-paper-sb3"
version = "0.0.1"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
gym = "^0.21.0"
JPype1 = "^1.3.0"
peewee = "^3.14.8"
gym-microrts = "^0.5.0"
spyder = {version = "^5.1.5", optional = true}

[tool.poetry.dev-dependencies]
tensorboard = "^2.5.0"
wandb = "^0.12.1"
trueskill = "^0.4.5"
stable-baselines3 = "^1.1.0"
torch = "1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
spyder = ["spyder"]